[package]
name = "ziwaan"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [ "ring" ]

[features]
default = [ "alloc" ]
alloc = []
openssl-backend = [ "openssl" ]
rust-crypto-backend = [ "rsa", "digest_09", "sha-1_09" ]

[dependencies]
untrusted = "0.7"
openssl = { version = "0.10", optional = true }

# aead
aes = "0.8"
chacha20 = "0.9"
chacha20poly1305 = "0.9"
aes-gcm = "0.9"
aead = "0.4"

# digest
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = "0.10"

# agreement & signature
curve25519-dalek = "3"
ed25519-dalek = "1"
x25519-dalek = "1"
p256 = "0.10"
p384 = "0.9"
elliptic-curve = { version = "0.11", features = [ "ecdh" ] }
ed25519 = "1"
ecdsa = "0.13"
rsa = { version = "0.5", optional = true }
digest_09 = { package = "digest", version = "0.9", optional = true }
sha-1_09 = { package = "sha-1", version = "0.9", optional = true }
sha2_09 = { package = "sha2", version = "0.9" } # p256 dependence
rand_core_06 = { package = "rand_core", version = "0.6", features = [ "getrandom" ] }

# util
getrandom = "0.2"
subtle = "2"
