[package]
name = "ziwaan"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [ "ring" ]

[features]
default = [ "alloc" ]
alloc = []
openssl-backend = [ "openssl", "openssl-sys", "foreign-types" ]
rust-crypto-backend = [
	"rsa", "rand_core_06",
	"p256", "p384", "elliptic-curve", "ed25519", "ecdsa"
]

[dependencies]
untrusted = "0.7"

# openssl-backend
openssl = { version = "0.10", optional = true }
openssl-sys = { version = "0.9", optional = true }
foreign-types = { version = "0.3", optional = true }

# aead
aes = "0.8"
chacha20 = "0.9"
chacha20poly1305 = "0.10.0-pre"
aes-gcm = "0.10.0-pre"
aead = "0.4"

# digest
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = "0.11"

# curve25519 agreement & signature
curve25519-dalek = "3"
ed25519-dalek = "1"
x25519-dalek = "1"

# rust-crypto-backend ec
p256 = { version = "0.11", optional = true }
p384 = { package = "p384_rs", version = "0.1.3", optional = true }
elliptic-curve = { version = "0.12", features = [ "ecdh" ], optional = true }
ed25519 = { version = "1", optional = true }
ecdsa = { version = "0.14", optional = true }

# rust-crypto-backend rsa
rsa = { version = "0.6", optional = true }
rand_core_06 = { package = "rand_core", version = "0.6", features = [ "getrandom" ], optional = true }

# util
getrandom = "0.2"
subtle = "2"
