[package]
name = "ring"
version = "0.16.20"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "alloc", "dev_urandom_fallback" ]
alloc = [ "ziwaan/alloc" ]
dev_urandom_fallback = []
std = []
wasm32_c = []

[dependencies]
ziwaan = { path = "..", default-features = false, features = [ "rust-crypto-backend" ] }
